--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="/action_page.php" id= "name">
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder = "Name"  ><br>
+	</form>
+		<form action="/action_page.php" id= "phone">
+		<label for="name">Phone Number:</label>
+		<input type="text" id="phone" placeholder = "Phone Number"><br>
+	</form>
+
+<form action="/action_page.php" id= "address">
+		<label for="address">Address:</label>
+		<input type="text" id="address" placeholder = "Address"><br>
+	</form>
+
+<form action="/action_page.php" id= "checkbox">
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox"><br>
+	</form>
+
+<form action="/action_page.php" id= "multiSelect">
+		<label for="checkbox">Please select your preferred breeds</label>
+			<select name="multiSelect" id="multiSelect">
+			  <option value="volvo">German Shepard</option>
+			  <option value="saab">Pug</option>
+			  <option value="mercedes">Rotille</option>
+  </select> <br>
+<input type="submit">
+</form>
+			
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
