--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 			  <option value="saab">Pug</option>
 			  <option value="mercedes">Rotille</option>
   </select> <br>
-<input type="submit">
+<input type="submit" value=" Submit" />
 </form>
 			
 
