--- a/main.html
+++ b/main.html
@@ -19,12 +19,12 @@
 
 <form action="/action_page.php" id= "address">
 		<label for="address">Address:</label>
-		<input type="text" id="address" placeholder = "Address"><br>
+		<input type="text" id="address" placeholder = "Address" ><br>
 	</form>
 
 <form action="/action_page.php" id= "checkbox">
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox"><br>
+		<input type="checkbox" id="checkbox"  value="checkbox" ><br>
 	</form>
 
 <form action="/action_page.php" id= "multiSelect">
@@ -34,7 +34,7 @@
 			  <option value="saab">Pug</option>
 			  <option value="mercedes">Rotille</option>
   </select> <br>
-<input type="submit" value=" Submit" />
+<input type="submit" value= "Submit">
 </form>
 			
 
