--- a/main.html
+++ b/main.html
@@ -24,17 +24,31 @@
 
 <form action="/action_page.php" id= "checkbox">
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox"  value="checkbox" ><br>
+		<input type="checkbox" id="checkbox"  value="Have you ever lived with a Dog before?" ><br><br>
 	</form>
 
-<form action="/action_page.php" id= "multiSelect">
+	<form action="/action_page.php" id= "multiSelect">
 		<label for="checkbox">Please select your preferred breeds</label>
-			<select name="multiSelect" id="multiSelect">
-			  <option value="volvo">German Shepard</option>
-			  <option value="saab">Pug</option>
-			  <option value="mercedes">Rotille</option>
-  </select> <br>
-<input type="submit" value= "Submit">
+		<select name = "multiSelect" id = "multiSelect" multiple> 			
+				<option value ="checkbox">German Shepard</option>
+				<option value="saab">Pug</option>
+				<option value="mercedes">Rotille</option>
+  </select>
+
+
+
+
+
+
+
+			
+</select>
+
+
+	
+			
+			</select> <br>
+	<input type="submit" value= "Submit">
 </form>
 			
 
