--- a/main.html
+++ b/main.html
@@ -34,21 +34,11 @@
 				<option value="saab">Pug</option>
 				<option value="mercedes">Rotille</option>
   </select>
-
-
-
-
-
-
-
-			
-</select>
-
-
 	
+
 			
-			</select> <br>
-	<input type="submit" value= "Submit">
+
+	<input type="submit" value= "Submit" id = "Submit">
 </form>
 			
 
