--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 
 			
 
-	<input type="submit" value= "Submit" id = "Submit">
+	<input type="submit" value= "Submit" id = "submit">
 </form>
 			
 
